# TTS-Indonesia-Gratis

./: .gitignore  MANIFEST.in  README.md  app.py  languages.json  pyproject.toml  requirements.txt  setup.py  themes.py
g2p_id/: g2p.py  syllable_splitter.py
g2p_id/data/: config.json  speakers.pth
g2p_id/scripts/: terbilang.py  tts.py
